@@ -1,7 +1,6 @@
 * Support Remote Rescue Shell [dropbear ssh]
 * Support loadable kernel modules.
 * Support software raid.
-* Clean empty (with .keep) dirs, create them while booting
 * Display better-initramfs version while booting.
 * Support for key on external device (enc_keydev and enc_keyfile).
 * Make rootdelay variable accept only numbers.
